# spotify-power-browser

./: .gitignore  .mcp.json  Dockerfile  README.md  ROADMAP.md  _probe_api_surface.py  _probe_batch_endpoints.py  compose.yaml  convert_liked_songs_to_excel.py  docker-compose.mock.yml  pull_followed_playlists_from_spotify.py  pull_liked_songs_from_spotify.py  pyproject.toml  spotify_auth_refresh_token.py  spotify_auth_service.py
.claude/: settings.json
application/: README.md  api_call_engine.py  config.py  loggers.py  requests_factory.py  response_parser.py
data/: .gitignore
docs/: README.md  architecture.md  auth.md  data-model.md  delivery.md  exploring-the-graph.md  mock-spotify-service.md  multiplayer-runbook.md  observability.md  testing.md
mcp_server/: README.md  __init__.py  __main__.py  connection.py  loggers.py  readonly.py  server.py
mock_spotify/: README.md  __init__.py  app.py  catalog.py
scripts/: README.md  mcp_server.sh  worktree_compose_env.sh
secrets/: .gitignore
tests/: README.md  conftest.py  test_annotations_annotate.py  test_annotations_cypher.py  test_annotations_mock_player.py  test_annotations_model.py  test_annotations_tracker.py  test_batch_handler.py  test_config.py  test_discovery_e2e.py  test_discovery_handlers.py  test_dispatcher.py  test_e2e_crawl.py  test_engine_consumer_resilience.py  test_engine_multiuser.py  test_engine_resilience.py  test_liked_songs.py  test_mastering_backfill.py  test_mastering_clustering.py  test_mastering_e2e.py  test_mastering_normalize.py  test_mastering_overrides.py  test_mastering_report.py  (+16 more)
(+133 files in other folders)
