[tool.poetry]
name = "spotify-power-browser"
version = "0.1.0"
description = "Data Engineering to synthesize my Spotify catalog. For tastemakers and audiophiles of all kinds."
authors = ["Michael Wheeler <michaelwheeler@michaelwheeler.io>"]
license = "Unlicensed"
readme = "README.md"
packages = [{include = "spotify_power_browser"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
falcon = "^3.1.1"
jupyter = "^1.0.0"
pandas = "^2.1.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
