[tool.poetry]
name = "spotify-power-browser"
version = "0.1.0"
description = "Data Engineering to synthesize my Spotify catalog. For tastemakers and audiophiles of all kinds."
authors = ["Michael Wheeler <michaelwheeler@michaelwheeler.io>"]
license = "Unlicensed"
readme = "README.md"
packages = [{include = "spotify_power_browser"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.34.2"
falcon = "^4.3.1"
jupyter = "^1.1.1"
pandas = "^3.0.3"
openpyxl = "^3.1.5"
pika = "^1.4.1"
pika-stubs = "^0.1.3"
neo4j = "^6.2.0"
jinja2 = "^3.1.6"
redis = "^8.0.0"
mcp = "^1.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
